# uuid

./: .gitignore  .rustfmt.toml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  SECURITY.md  appveyor.yml  bors.toml  build.rs
.cargo/: config.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  bug  feature  tracker
.github/PULL_REQUEST_TEMPLATE/: release
.github/workflows/: bors.yml  ci.yml  clippy.yml  fmt.yml  os.yml  outdated.yml  rust.yml  windows.yml
benches/: format_str.rs  invalid_parse_str.rs  mod.rs  new.rs  parse_str.rs  serde_support.rs  v1.rs  v1_generation.rs  v4.rs  v7.rs  valid_parse_str.rs
benches/macros/: invalid_parse.rs  invalid_parse.stderr  renamed.rs  valid_parse.rs
benches/slog_support/: mod.rs  parse_str.rs
bindings/java/: .gitignore  Cargo.toml  build.gradle  settings.gradle
bindings/java/gradle/: libs.versions.toml
bindings/java/gradle/wrapper/: gradle-wrapper.properties
bindings/java/src/main/java/io/github/honhimw/uuid/: Context.java  InternalUuid.java  LoadHelper.java  MacAddress.java  UUIDs.java  Uuid.java  V1.java  V3.java  V4.java  V5.java  V6.java  V7.java  V8.java  package-info.java
bindings/java/src/main/rs/: lib.rs
bindings/java/src/test/java/io/github/honhimw/uuid/: AlternativeJDKUUID.java  BaseTest.java  ContextTests.java  UuidTests.java
bindings/java/src/test/java/io/github/honhimw/uuid/bench/: AbstractBenchmarks.java  AlternativeJdk.java  BenchmarkRunner.java  Jdk.java  Self.java
debug_metadata/: README.md  uuid.natvis
docs/rfcs/: uuidgen-refactor.md
examples/: Cargo.toml  random_uuid.rs  sortable_uuid.rs  uuid_macro.rs  windows_guid.rs
examples/src/: random_uuid.rs  sortable_uuid.rs  sortable_uuid_bulk.rs  uuid_macro.rs  windows_guid.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_target_parse/: guid  hyphenated  simple  urn
fuzz/fuzz_targets/: fuzz_target_parse.rs
getrandom/: Cargo.toml
getrandom/src/: lib.rs
macros/: COPYRIGHT  Cargo.toml  LICENSE-MIT
macros/src/: error.rs  lib.rs  parser.rs
rng/: Cargo.toml
rng/src/: lib.rs
shared/: README.md  error.rs  parser.rs
src/: .lib.rs.swp  adapter.rs  builder.rs  chrono_support.rs  const_fn_support.rs  core_support.rs  error.rs  external.rs  fmt.rs  guid_support.rs  lib.rs  macros.rs  main.rs  md5.rs  node_id.rs  non_nil.rs  ns.rs  parser.rs  prelude.rs  rng.rs  rocket.rs  serde.rs  serde_support.rs  sha1.rs  slog_support.rs  std_support.rs  test_util.rs  timestamp.rs  u128_support.rs  v1.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  winapi_support.rs
src/adapter/: compact.rs  mod.rs
src/adapter/core_support/: macros.rs  mod.rs
src/adapter/endian/: core_support.rs  mod.rs
src/builder/: error.rs  mod.rs
src/parser/: core_support.rs  error.rs  mod.rs  std_support.rs
src/util/: core_support.rs  mod.rs
tests/: debugger_visualizer.rs  macros.rs
tests/smoke-test/: Cargo.toml
tests/ui/: compile_fail.stderr
tests/ui/compile_fail/: invalid_parse.rs  invalid_parse.stderr
tests/ui/compile_pass/: hygiene.rs
tests/wasm32-getrandom-test/: Cargo.toml
tests/wasm32-getrandom-test/src/: lib.rs
uuid-macros/: Cargo.toml
uuid-macros/src/: lib.rs
uuid-parser/: Cargo.toml
uuid-parser/src/: core_support.rs  lib.rs  std_support.rs
