[package]
authors = [
    "Ashley Mannix<ashleymannix@live.com.au>",
    "Christopher Armstrong",
    "Dylan DPC<dylan.dpc@gmail.com>",
    "Hunar Roop Kahlon<hunar.roop@gmail.com>"
]
categories = [
    "data-structures",
    "no-std",
    "parser-implementations",
    "wasm"
]
description = "A library to generate and parse UUIDs."
documentation = "https://docs.rs/uuid"
edition = "2018"
exclude = [
    ".github/**",
    ".travis.yml",
    "appveyor.yml",
    "bors.toml"
]
keywords = [
    "guid",
    "unique",
    "uuid"
]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/uuid-rs/uuid"
name = "uuid"
readme = "README.md"
repository = "https://github.com/uuid-rs/uuid"
version = "1.0.0-alpha.1" # remember to update html_root_url in lib.rs

[package.metadata.docs.rs]
features = ["serde", "arbitrary", "slog", "v1", "v3", "v4", "v5"]

[package.metadata.playground]
features = ["serde", "v1", "v3", "v4", "v5"]

[badges.is-it-maintained-issue-resolution]
repository = "uuid-rs/uuid"

[badges.is-it-maintained-open-issues]
repository = "uuid-rs/uuid"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "uuid-rs/uuid"

[features]
default = ["std"]
std = []
macro-diagnostics = ["uuid-macro-internal"]

v1 = ["atomic"]
v3 = ["md-5"]
v4 = ["rng"]
v5 = ["sha-1"]

js = ["getrandom", "getrandom/js"]

rng = ["getrandom"]
fast-rng = ["rng", "rand"]

# Unstable features (these also need RUSTFLAGS="--cfg uuid_unstable" to work)
zerocopy-unstable = ["zerocopy"]

# Private
[dependencies.getrandom]
optional = true
version = "0.2"

# Private
[dependencies.rand]
optional = true
version = "0.8"

# Private
[dependencies.atomic]
default-features = false
optional = true
version = "0.5"

# Private
[dependencies.md-5]
default-features = false
optional = true
version = "0.9"

# Private
[dependencies.sha-1]
default-features = false
optional = true
version = "0.9"

# Public: Re-exported
[dependencies.uuid-macro-internal]
version = "1.0.0-alpha.1"
path = "macros"
optional = true

# Public: Used in trait impls on `Uuid`
[dependencies.serde]
default-features = false
optional = true
version = "1.0.56"

# Public: Used in trait impls on `Uuid`
[dependencies.slog]
optional = true
version = "2"

# Public: Used in trait impls on `Uuid`
[dependencies.arbitrary]
optional = true
version = "1"

# Public (unstable): Used in `zerocopy` derive
[dependencies.zerocopy]
optional = true
version = "0.6"

[dev-dependencies.bincode]
version = "1.0"

[dev-dependencies.serde_derive]
version = "1.0.79"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.serde_test]
version = "1.0.56"

[dev-dependencies.wasm-bindgen-lib]
package = "wasm-bindgen"
version = "0.2"

[dev-dependencies.wasm-bindgen-test]
version = "0.3"

[dev-dependencies.trybuild]
version = "1.0.52"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = ["combaseapi", "impl-default"]

[workspace]
members = [
    "macros"
]
