[package]
name = "uuid-examples"
version = "0.0.0"
publish = false
edition = "2018"

[[example]]
name = "random_uuid"
path = "src/random_uuid.rs"

[[example]]
name = "sortable_uuid"
path = "src/sortable_uuid.rs"

[[example]]
name = "sortable_uuid_bulk"
path = "src/sortable_uuid_bulk.rs"

[[example]]
name = "uuid_macro"
path = "src/uuid_macro.rs"

[[example]]
name = "windows_guid"
path = "src/windows_guid.rs"

[dependencies.uuid]
path = "../"
features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"]

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_System_Com"]
