[package]
name = "uuid-getrandom-internal"
version = "1.12.1"
edition = "2018"
authors = [
    "uuid-rs contributors"
]
categories = [
    "data-structures",
    "no-std",
    "parser-implementations",
    "wasm"
]
description = "Private implementation details of the uuid crate."
documentation = "https://docs.rs/uuid"
repository = "https://github.com/uuid-rs/uuid"
license = "Apache-2.0 OR MIT"

# Forces a dependency on `getrandom`
[dependencies.getrandom]
version = "0.3"
