[package]
name = "uuid-macro-internal"
version = "1.0.0-alpha.1"
edition = "2018"
authors = [
    "QnnOkabayashi"
]
categories = [
    "data-structures",
    "no-std",
    "parser-implementations",
    "wasm"
]
description = "Private implementation details of the uuid! macro."
documentation = "https://docs.rs/uuid"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.80"
quote = "1.0.10"
proc-macro2 = "1.0.29"
