[package]
name = "uuid-macro-internal"
version = "1.18.0"
edition = "2018"
authors = [
    "QnnOkabayashi"
]
categories = [
    "data-structures",
    "no-std",
    "parser-implementations",
    "wasm"
]
description = "Private implementation details of the uuid! macro."
documentation = "https://docs.rs/uuid"
repository = "https://github.com/uuid-rs/uuid"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies.syn]
version = "2.0.5"

[dependencies.quote]
version = "1.0.10"

[dependencies.proc-macro2]
version = "1.0.29"
features = ["span-locations"]
