[package]
name = "uuid-rng-internal"
version = "1.22.0"
edition = "2021"
authors = [
    "uuid-rs contributors"
]
categories = [
    "data-structures",
    "no-std",
    "parser-implementations",
    "wasm"
]
description = "Private implementation details of the uuid crate."
documentation = "https://docs.rs/uuid"
repository = "https://github.com/uuid-rs/uuid"
license = "Apache-2.0 OR MIT"

# Forces a dependency on `getrandom`
[dependencies.getrandom]
version = "0.4"
optional = true

[dependencies.rand]
version = "0.10"
optional = true
